Pretty much done with day1.  Just needs some polish

--- a/day1/assignments/Day1-Homework_Biopython.ipynb
+++ b/day1/assignments/Day1-Homework_Biopython.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30944"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(records)"
    ]
@@ -156,8 +145,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Exercise 2 - "
+    "## Exercise 2 - Create protein translations for each of the Dmel cDNAs and write the output to a file in 'fasta' format"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reconnect to file handle and parse\n",
+    "handle = gzip.open('Drosophila_melanogaster.BDGP6.28.cdna.all.fa.gz','rt')\n",
+    "\n",
+    "Dmel_file = SeqIO.parse(handle,'fasta')\n",
+    "\n",
+    "# open file handle for output\n",
+    "outfile = open('Dmel_proteins.fa','w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through all records, convert and write to output\n",
+    "\n",
+    "for cDNA in Dmel_file:\n",
+    "    prot = cDNA.translate()\n",
+    "    outfile.write(prot.format('fasta'))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bonus: notice that the name (LOCUS) of each record is not carried over during the translation by default?  Can you find a way to make sure this happens so you can identify your newly translated protein sequences?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 - Download and analyze the full record for a human gene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 1. Using the Entrez access from Biopython, search for nucleotide records for any human gene of your choice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Once you have identified an Entrez ID for your gene, use the `efetch` utility to retrieve the full record."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. How many of each A,C,G,T bases are in your gene?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. What is the length and GC content for your gene?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -176,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
