file reorg for day 1

--- a/day1/notebooks/Day1.1-Morning-CLI_intro_and_git_AG.ipynb
+++ b/day1/notebooks/Day1.1-Morning-CLI_intro_and_git_AG.ipynb
@@ -35,7 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Navigating the File System"
+    "### Navigating the File System\n",
+    "The first thing we need to figure out is 'where are we' in the file system.  To do this, we want to '_*P*_rint the _*W*_orking _*D*_irectory' using the command `pwd`"
    ]
   },
   {
