Add Intro Slides for day1 welcome

--- a/day1/notebooks/Day1.1-Morning-CLI_intro_and_git_AG.ipynb
+++ b/day1/notebooks/Day1.1-Morning-CLI_intro_and_git_AG.ipynb
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this file is empty, we should add something to it at this point.  We can write directly to a file by _*redirecting*_ some content into the file.  This is achieved with the `>`. Imaging that this is an arrow pointing to where you want to put the output.  Here we will also introduce you to the `echo` command which simply repeats the first argument.  Here we're going to have the output of `echo` _redirected_ into our new file."
+    "Since this file is empty, we should add something to it at this point.  We can write directly to a file by _*redirecting*_ some content into the file.  This is achieved with the `>`. Imagine that this is an arrow pointing to where you want to put the output.  Here we will also introduce you to the `echo` command which simply repeats the first argument.  Here we're going to have the output of `echo` _redirected_ into our new file."
    ]
   },
   {
@@ -360,7 +360,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cat myBrandNewFile.txt"
+    "cat myBrandNewFile.txt\n",
+    "\n",
+    "more myBrandNewFile.txt"
    ]
   },
   {
@@ -387,14 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `rm` command removes files or directories <font color='red'>(removed files will be gone forever, proceed with caution)</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And finally, we can remove a file using the `rm` command:"
+    "And finally, we can remove a file using the `rm` command. The `rm` command removes files or directories <font color='red'>(removed files will be gone forever, proceed with caution)</font>:"
    ]
   },
   {
