--- a/day2/notebooks/visualizing.ipynb
+++ b/day2/notebooks/visualizing.ipynb
@@ -711,16 +711,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f815a29a898>"
+       "<seaborn.axisgrid.PairGrid at 0x7f815884fc18>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
