--- a/day2/notebooks/tidying.ipynb
+++ b/day2/notebooks/tidying.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +475,13 @@
        "[7240 rows x 60 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tb_raw=pd.read_csv('data/tb_2014.csv')\n",
+    "tb_raw=pd.read_csv('~/day2/data/tb_2014.csv')\n",
     "tb_raw"
    ]
   },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "[7240 rows x 58 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -921,15 +921,15 @@
        "3         new_sp_m014\n",
        "4         new_sp_m014\n",
        "             ...     \n",
-       "405435    new_rel_f65\n",
-       "405436    new_rel_f65\n",
-       "405437    new_rel_f65\n",
-       "405438    new_rel_f65\n",
-       "405439    new_rel_f65\n",
+       "405435     newrel_f65\n",
+       "405436     newrel_f65\n",
+       "405437     newrel_f65\n",
+       "405438     newrel_f65\n",
+       "405439     newrel_f65\n",
        "Name: variable, Length: 405440, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "[405440 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
        "[405440 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
        "[405440 rows x 9 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
        "array(['014', '1524', '2534', '3544', '4554', '5564', '65'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
        "[405440 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,6 +1692,22 @@
     "tb['age']=tb['age'].str.replace('5564', '55-64')\n",
     "tb['age']=tb['age'].str.replace('65', '65+')\n",
     "tb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's also say that we want to write out our \"fixed\" and tidy dataframe to a spreadsheet to open in excel or other.  We can do that with `to_csv` <https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_csv.html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tb.to_csv('cleaned_who.csv')"
    ]
   },
   {
@@ -1716,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1898,7 @@
        "[11872 rows x 7 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2083,7 @@
        "[2329 rows x 7 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2151,20 +2167,20 @@
        "      <td>35-44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21842</th>\n",
-       "      <td>American Samoa</td>\n",
+       "      <th>21876</th>\n",
+       "      <td>Andorra</td>\n",
        "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
        "      <td>35-44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21876</th>\n",
-       "      <td>Andorra</td>\n",
+       "      <th>21910</th>\n",
+       "      <td>Angola</td>\n",
        "      <td>2000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>912.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
@@ -2181,78 +2197,78 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405290</th>\n",
-       "      <td>Wallis and Futuna Islands</td>\n",
+       "      <th>288554</th>\n",
+       "      <td>Switzerland</td>\n",
        "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>new</td>\n",
-       "      <td>rel</td>\n",
+       "      <td>ep</td>\n",
+       "      <td>f</td>\n",
+       "      <td>45-54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292790</th>\n",
+       "      <td>Israel</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>new</td>\n",
+       "      <td>ep</td>\n",
+       "      <td>f</td>\n",
+       "      <td>55-64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295794</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>new</td>\n",
+       "      <td>ep</td>\n",
+       "      <td>f</td>\n",
+       "      <td>55-64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300030</th>\n",
+       "      <td>Israel</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>new</td>\n",
+       "      <td>ep</td>\n",
        "      <td>f</td>\n",
        "      <td>65+</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405324</th>\n",
-       "      <td>West Bank and Gaza Strip</td>\n",
+       "      <th>303034</th>\n",
+       "      <td>Switzerland</td>\n",
        "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>new</td>\n",
-       "      <td>rel</td>\n",
-       "      <td>f</td>\n",
-       "      <td>65+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>405358</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>new</td>\n",
-       "      <td>rel</td>\n",
-       "      <td>f</td>\n",
-       "      <td>65+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>405392</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>new</td>\n",
-       "      <td>rel</td>\n",
-       "      <td>f</td>\n",
-       "      <td>65+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>405426</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>new</td>\n",
-       "      <td>rel</td>\n",
+       "      <td>ep</td>\n",
        "      <td>f</td>\n",
        "      <td>65+</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6784 rows × 7 columns</p>\n",
+       "<p>1334 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          country  year  value new_old type sex    age\n",
-       "21740                 Afghanistan  2000  149.0     new   sp   m  35-44\n",
-       "21774                     Albania  2000   14.0     new   sp   m  35-44\n",
-       "21808                     Algeria  2000  610.0     new   sp   m  35-44\n",
-       "21842              American Samoa  2000    NaN     new   sp   m  35-44\n",
-       "21876                     Andorra  2000    0.0     new   sp   m  35-44\n",
-       "...                           ...   ...    ...     ...  ...  ..    ...\n",
-       "405290  Wallis and Futuna Islands  2000    NaN     new  rel   f    65+\n",
-       "405324   West Bank and Gaza Strip  2000    NaN     new  rel   f    65+\n",
-       "405358                      Yemen  2000    NaN     new  rel   f    65+\n",
-       "405392                     Zambia  2000    NaN     new  rel   f    65+\n",
-       "405426                   Zimbabwe  2000    NaN     new  rel   f    65+\n",
+       "            country  year  value new_old type sex    age\n",
+       "21740   Afghanistan  2000  149.0     new   sp   m  35-44\n",
+       "21774       Albania  2000   14.0     new   sp   m  35-44\n",
+       "21808       Algeria  2000  610.0     new   sp   m  35-44\n",
+       "21876       Andorra  2000    0.0     new   sp   m  35-44\n",
+       "21910        Angola  2000  912.0     new   sp   m  35-44\n",
+       "...             ...   ...    ...     ...  ...  ..    ...\n",
+       "288554  Switzerland  2000    3.0     new   ep   f  45-54\n",
+       "292790       Israel  2000    6.0     new   ep   f  55-64\n",
+       "295794  Switzerland  2000    4.0     new   ep   f  55-64\n",
+       "300030       Israel  2000   26.0     new   ep   f    65+\n",
+       "303034  Switzerland  2000   12.0     new   ep   f    65+\n",
        "\n",
-       "[6784 rows x 7 columns]"
+       "[1334 rows x 7 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,28 +2291,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "country\n",
-       "Afghanistan                  1131.0\n",
-       "Albania                       105.0\n",
-       "Algeria                      3214.0\n",
-       "American Samoa                  3.0\n",
-       "Andorra                         0.0\n",
-       "                              ...  \n",
-       "Wallis and Futuna Islands       0.0\n",
-       "West Bank and Gaza Strip        0.0\n",
-       "Yemen                        2390.0\n",
-       "Zambia                       5593.0\n",
-       "Zimbabwe                        0.0\n",
-       "Name: value, Length: 212, dtype: float64"
+       "Afghanistan        1131.0\n",
+       "Albania             105.0\n",
+       "Algeria            3214.0\n",
+       "American Samoa        3.0\n",
+       "Andorra               0.0\n",
+       "                   ...   \n",
+       "Uzbekistan         1900.0\n",
+       "Vanuatu              32.0\n",
+       "Viet Nam          40886.0\n",
+       "Yemen              2390.0\n",
+       "Zambia             5593.0\n",
+       "Name: value, Length: 168, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,13 +2324,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2323,16 +2332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "175.5"
+       "407.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2350,23 +2359,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Afghanistan', 'Algeria', 'Angola', 'Argentina', 'Armenia', 'Austria',\n",
-       "       'Bangladesh', 'Belgium', 'Benin', 'Bolivia (Plurinational State of)',\n",
-       "       ...\n",
-       "       'Uganda', 'Ukraine',\n",
+       "Index(['Afghanistan', 'Algeria', 'Angola', 'Argentina', 'Bangladesh', 'Benin',\n",
+       "       'Bolivia (Plurinational State of)', 'Bosnia and Herzegovina',\n",
+       "       'Botswana', 'Brazil', 'Burkina Faso', 'Cambodia', 'Cameroon', 'Chile',\n",
+       "       'China', 'China, Hong Kong SAR', 'Colombia',\n",
+       "       'Democratic People's Republic of Korea',\n",
+       "       'Democratic Republic of the Congo', 'Djibouti', 'Dominican Republic',\n",
+       "       'Egypt', 'El Salvador', 'Ethiopia', 'France', 'Ghana', 'Guatemala',\n",
+       "       'Guinea', 'Haiti', 'Honduras', 'India', 'Iran (Islamic Republic of)',\n",
+       "       'Iraq', 'Japan', 'Kazakhstan', 'Kenya', 'Kyrgyzstan',\n",
+       "       'Lao People's Democratic Republic', 'Latvia', 'Lesotho', 'Lithuania',\n",
+       "       'Malawi', 'Malaysia', 'Mali', 'Mexico', 'Mongolia', 'Morocco',\n",
+       "       'Myanmar', 'Namibia', 'Nepal', 'Nicaragua', 'Niger', 'Nigeria',\n",
+       "       'Pakistan', 'Paraguay', 'Peru', 'Poland', 'Portugal',\n",
+       "       'Republic of Korea', 'Romania', 'Russian Federation', 'Rwanda',\n",
+       "       'Saudi Arabia', 'Senegal', 'Sierra Leone', 'Somalia', 'South Africa',\n",
+       "       'Sri Lanka', 'Sudan', 'Swaziland', 'Syrian Arab Republic', 'Thailand',\n",
+       "       'Togo', 'Tunisia', 'Turkmenistan', 'Uganda', 'Ukraine',\n",
        "       'United Kingdom of Great Britain and Northern Ireland',\n",
-       "       'United Republic of Tanzania', 'United States of America', 'Uruguay',\n",
-       "       'Uzbekistan', 'Viet Nam', 'Yemen', 'Zambia'],\n",
-       "      dtype='object', name='country', length=106)"
+       "       'United Republic of Tanzania', 'United States of America', 'Uzbekistan',\n",
+       "       'Viet Nam', 'Yemen', 'Zambia'],\n",
+       "      dtype='object', name='country')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2377,27 +2399,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Writing data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's also say that we want to write out our \"fixed\" and tidy dataframe to a spreadsheet to open in excel or other.  We can do that with `to_csv` <https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_csv.html>"
+    "z=tb.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb.to_csv('cleaned_who.csv')"
+    "a=z[z.country.isin(['Brazil', 'Chile', 'Peru'])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country  age  \n",
+       "Brazil   0-14      511.172414\n",
+       "         15-24    2768.172414\n",
+       "         25-34    3607.534483\n",
+       "         35-44    3139.465517\n",
+       "         45-54    2576.844828\n",
+       "         55-64    1557.655172\n",
+       "         65+      1333.206897\n",
+       "Chile    0-14        9.187500\n",
+       "         15-24      58.921875\n",
+       "         25-34      88.765625\n",
+       "         35-44      90.593750\n",
+       "         45-54      87.843750\n",
+       "         55-64      71.906250\n",
+       "         65+        93.453125\n",
+       "Peru     0-14      347.088235\n",
+       "         15-24    2905.970588\n",
+       "         25-34    1808.794118\n",
+       "         35-44    1017.205882\n",
+       "         45-54     666.882353\n",
+       "         55-64     464.441176\n",
+       "         65+       522.000000\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b=a.groupby(by=['country', 'age'])['value']\n",
+    "b.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
