ready for day2?

--- a/day2/notebooks/tidying.ipynb
+++ b/day2/notebooks/tidying.ipynb
@@ -18,13 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some stuff here about the concept of tidy data, maybe with that figure lifted from hadley.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<img src=\"../files/tidy_rdatasci.png\" width=800>"
    ]
   },
@@ -2399,72 +2392,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "z=tb.dropna()"
+    "### Exercise:\n",
+    "Please calculate the average case number for Brazil, Chile, and Peru for each age bracket that you have data for."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=z[z.country.isin(['Brazil', 'Chile', 'Peru'])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "country  age  \n",
-       "Brazil   0-14      511.172414\n",
-       "         15-24    2768.172414\n",
-       "         25-34    3607.534483\n",
-       "         35-44    3139.465517\n",
-       "         45-54    2576.844828\n",
-       "         55-64    1557.655172\n",
-       "         65+      1333.206897\n",
-       "Chile    0-14        9.187500\n",
-       "         15-24      58.921875\n",
-       "         25-34      88.765625\n",
-       "         35-44      90.593750\n",
-       "         45-54      87.843750\n",
-       "         55-64      71.906250\n",
-       "         65+        93.453125\n",
-       "Peru     0-14      347.088235\n",
-       "         15-24    2905.970588\n",
-       "         25-34    1808.794118\n",
-       "         35-44    1017.205882\n",
-       "         45-54     666.882353\n",
-       "         55-64     464.441176\n",
-       "         65+       522.000000\n",
-       "Name: value, dtype: float64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b=a.groupby(by=['country', 'age'])['value']\n",
-    "b.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
