--- a/exercise_answers.ipynb
+++ b/exercise_answers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,33 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "  message: 'The solver successfully reached the end of the integration interval.'\n",
-       "     nfev: 86\n",
-       "     njev: 0\n",
-       "      nlu: 0\n",
-       "      sol: <scipy.integrate._ivp.common.OdeSolution object at 0x7fd5c0e677b8>\n",
-       "   status: 0\n",
-       "  success: True\n",
-       "        t: array([ 0.        ,  0.12357624,  1.35933863,  4.41488646,  8.08260066,\n",
-       "       11.98642743, 15.98575101, 20.02441663, 24.07941141, 28.14120457,\n",
-       "       32.20583173, 36.27164092, 40.33794323, 44.40445127, 48.        ])\n",
-       " t_events: [array([1.99733947])]\n",
-       "        y: array([[1.00000000e+02, 1.04381363e+02, 1.60270250e+02, 4.62734841e+02,\n",
-       "        1.65213808e+03, 6.40210809e+03, 2.56436645e+04, 1.04126416e+05,\n",
-       "        4.25206935e+05, 1.74045713e+06, 7.13104227e+06, 2.92294508e+07,\n",
-       "        1.19829168e+08, 4.91287155e+08, 1.71071812e+09]])\n",
-       " y_events: [array([[200.]])]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'solve_ivp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-fb9dc7c9c491>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mC_0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#initial Condition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtspan\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m48\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#Time span\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mC_solver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msolve_ivp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrowth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtspan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m.347\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevents\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdouble\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdense_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mC_solver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'solve_ivp' is not defined"
+     ]
     }
    ],
    "source": [
