update to git post class

--- a/day5/assignments/lunchproblemset.ipynb
+++ b/day5/assignments/lunchproblemset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Day 5 working lunch exercise\n"
+    "# Day 5 working lunch exercise\n"
    ]
   },
   {
@@ -26,7 +26,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -61,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. You are tracking the growth of two bacterial strains over time. You notice that the two strains grow slightly differently, but what affect does strain have on the doubling time? To answer this, you will need to:\n",
+    "2. You are tracking the growth of two bacterial strains over time. You notice that the two strains grow slightly differently, but what effect does strain have on the doubling time? To answer this, you will need to:\n",
     "a) Tidy the following dataset and plot growth of the two samples\n",
     "b) Fit a curve of exponential growth to the dataset\n",
     "c) Use this curve to estimate growth rate and compare between the two. "
