--- a/day1/notebooks/Day1.1-Morning-CLI_intro_and_git_AG.ipynb
+++ b/day1/notebooks/Day1.1-Morning-CLI_intro_and_git_AG.ipynb
@@ -41,11 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/loyalgoff/Google Drive/Work/Goff Lab/Teaching/BCMB/Bootcamp/Bootcamp2021/bcmb_bootcamp/day1/notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash \n",
     "pwd"
@@ -60,9 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day1-overview.md\n",
+      "Day1.1-Morning-CLI_intro_and_git_AG.ipynb\n",
+      "Day1.1-Review_of_prereq_assignments\n",
+      "Day1.2-Morning-Intro_to_git_and_GitHub.ipynb\n",
+      "Day1.3-Afternoon-Intro_to_python_I.ipynb\n",
+      "Day1.3-Python_flow_control_and_functional_programming.ipynb\n",
+      "Day1.4-Afternoon-Intro_to_Python_II.ipynb\n",
+      "Foxp1.gbk\n",
+      "test.fa\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "ls"
@@ -185,12 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -206,13 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 548\n",
+      "-rw-r--r-- 1 loyalgoff staff   1130 Aug 23 12:44 Day1-overview.md\n",
+      "-rw-r--r-- 1 loyalgoff staff  95002 Aug 23 12:20 Day1.1-Morning-CLI_intro_and_git_AG.ipynb\n",
+      "drwxr-xr-x 2 loyalgoff staff     68 Aug 23 12:29 Day1.1-Review_of_prereq_assignments\n",
+      "-rw-r--r-- 1 loyalgoff staff 385296 Aug 23 12:20 Day1.2-Morning-Intro_to_git_and_GitHub.ipynb\n",
+      "-rw-r--r-- 1 loyalgoff staff  48002 Aug 23 12:43 Day1.3-Afternoon-Intro_to_python_I.ipynb\n",
+      "drwxr-xr-x 2 loyalgoff staff     68 Aug 23 12:32 Day1.3-Python_flow_control_and_functional_programming.ipynb\n",
+      "-rw-r--r-- 1 loyalgoff staff    903 Aug 23 12:45 Day1.4-Afternoon-Intro_to_Python_II.ipynb\n",
+      "-rw-r--r-- 1 loyalgoff staff  11725 Aug 23 12:20 Foxp1.gbk\n",
+      "drwxr-xr-x 2 loyalgoff staff     68 Aug 23 12:46 myDirectory\n",
+      "-rw-r--r-- 1 loyalgoff staff    528 Aug 23 12:20 test.fa\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "%%bash\n",
     "ls -l"
@@ -234,9 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/loyalgoff/Google Drive/Work/Goff Lab/Teaching/BCMB/Bootcamp/Bootcamp2021/bcmb_bootcamp/day1/notebooks/myDirectory\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd myDirectory\n",
@@ -252,9 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/loyalgoff/Google Drive/Work/Goff Lab/Teaching/BCMB/Bootcamp/Bootcamp2021/bcmb_bootcamp/day1\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd ..\n",
@@ -270,9 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day1-overview.md\n",
+      "Day1.1-Morning-CLI_intro_and_git_AG.ipynb\n",
+      "Day1.1-Review_of_prereq_assignments\n",
+      "Day1.2-Morning-Intro_to_git_and_GitHub.ipynb\n",
+      "Day1.3-Afternoon-Intro_to_python_I.ipynb\n",
+      "Day1.3-Python_flow_control_and_functional_programming.ipynb\n",
+      "Day1.4-Afternoon-Intro_to_Python_II.ipynb\n",
+      "Foxp1.gbk\n",
+      "test.fa\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "rmdir myDirectory\n",
@@ -412,9 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\ttest.fa\n",
+      "4.0K\ttest.fa\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "du test.fa\n",
@@ -426,14 +501,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lets see what's actually inside this file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">dna_sequence_1\n",
+      "TGGCGTTGTCTTTAATTCGATTAGCATTGCATATCGATTATCTAGCGATATGCTATGCTTAGC\n",
+      ">dna_sequence_2\n",
+      "AGCCATATGTATCGAGCGATATGCGATACGAGTATCGAGTATGCAGTATGCATTGCAGTATGC\n",
+      ">dna_sequence_3\n",
+      "TGGGTATGCGCGACGAGCATTATACGATGCATTATTACGGATCTACGGCGATATTACGTACGA\n",
+      ">dna_sequence_4\n",
+      "GGACGTATCGAGTCTAGCGAGCGACTTCGAGCGATATCGGACTCTCGTCCTCTTCAGTCAGCC\n",
+      ">dna_sequence_5\n",
+      "TTTACGGACTTACGGACTAGCTGAGCTAGCTACGATCGATCGATCGTAGCTACGATCGTAGCT\n",
+      ">dna_sequence_6\n",
+      "CATCGATCGTAGC\n",
+      ">dna_sequence_7\n",
+      "ACACGGACTAGCGGATCTATCTGTACTGAGCGTATCTGACGGTAGCTATCGGACGTATCGGACGGACACAGCGTATGCGAC\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "more test.fa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To count the number of words and lines in your file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 14  14 528 test.fa\n",
+      "14 test.fa\n",
+      "528 test.fa\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "wc test.fa #words\n",
@@ -450,9 +573,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--2021-08-23 12:48:38--  http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/chr01.fsa\n",
+      "Resolving sgd-archive.yeastgenome.org (sgd-archive.yeastgenome.org)... 52.218.201.187\n",
+      "Connecting to sgd-archive.yeastgenome.org (sgd-archive.yeastgenome.org)|52.218.201.187|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 234177 (229K) [binary/octet-stream]\n",
+      "Saving to: ‘chr01.fsa’\n",
+      "\n",
+      "     0K .......... .......... .......... .......... .......... 21%  396K 0s\n",
+      "    50K .......... .......... .......... .......... .......... 43%  786K 0s\n",
+      "   100K .......... .......... .......... .......... .......... 65% 49.6M 0s\n",
+      "   150K .......... .......... .......... .......... .......... 87% 21.5M 0s\n",
+      "   200K .......... .......... ........                        100%  465K=0.3s\n",
+      "\n",
+      "2021-08-23 12:48:39 (898 KB/s) - ‘chr01.fsa’ saved [234177/234177]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "wget http://sgd-archive.yeastgenome.org/sequence/S288C_reference/chromosomes/fasta/chr01.fsa"
@@ -462,13 +607,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### File compression/uncompression\n",
-    "This is done using programs such as tar, and gzip/gunzip"
+    "If we check the directory listing, we should now see a new file `chr01.fsa`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 784\n",
+      "drwxr-xr-x 13 loyalgoff staff    442 Aug 23 12:49 .\n",
+      "drwxr-xr-x  5 loyalgoff staff    170 Aug 23 12:20 ..\n",
+      "drwxr-xr-x 13 loyalgoff staff    442 Aug 23 12:44 .ipynb_checkpoints\n",
+      "-rw-r--r--  1 loyalgoff staff   1130 Aug 23 12:44 Day1-overview.md\n",
+      "-rw-r--r--  1 loyalgoff staff 100252 Aug 23 12:49 Day1.1-Morning-CLI_intro_and_git_AG.ipynb\n",
+      "drwxr-xr-x  2 loyalgoff staff     68 Aug 23 12:29 Day1.1-Review_of_prereq_assignments\n",
+      "-rw-r--r--  1 loyalgoff staff 385296 Aug 23 12:20 Day1.2-Morning-Intro_to_git_and_GitHub.ipynb\n",
+      "-rw-r--r--  1 loyalgoff staff  48002 Aug 23 12:43 Day1.3-Afternoon-Intro_to_python_I.ipynb\n",
+      "drwxr-xr-x  2 loyalgoff staff     68 Aug 23 12:32 Day1.3-Python_flow_control_and_functional_programming.ipynb\n",
+      "-rw-r--r--  1 loyalgoff staff    903 Aug 23 12:45 Day1.4-Afternoon-Intro_to_Python_II.ipynb\n",
+      "-rw-r--r--  1 loyalgoff staff  11725 Aug 23 12:20 Foxp1.gbk\n",
+      "-rw-r--r--  1 loyalgoff staff 234177 Oct 25  2019 chr01.fsa\n",
+      "-rw-r--r--  1 loyalgoff staff    528 Aug 23 12:20 test.fa\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -la"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a quick peek inside.  This is a large file so maybe we only want to see the first few lines..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">tpg|BK006935.2| [organism=Saccharomyces cerevisiae S288c] [strain=S288c] [moltype=genomic] [chromosome=I] [note=R64-1-1]\n",
+      "CCACACCACACCCACACACCCACACACCACACCACACACCACACCACACCCACACACACA\n",
+      "CATCCTAACACTACCCTAACACAGCCCTAATCTAACCCTGGCCAACCTGTCTCTCAACTT\n",
+      "ACCCTCCATTACCCTGCCTCCACTCGTTACCCTGTCCCATTCAACCATACCACTCCGAAC\n",
+      "CACCATCCATCCCTCTACTTACTACCACTCACCCACCGTTACCCTCCAATTACCCATATC\n",
+      "CAACCCACTGCCACTTACCCTACCATTACCCTACCATCCACCATGACCTACTCACCATAC\n",
+      "TGTTCTTCTACCCACCATATTGAAACGCTAACAAATGATCGTAAATAACACACACGTGCT\n",
+      "TACCCTACCACTTTATACCACCACCACATGCCATACTCACCCTCACTTGTATACTGATTT\n",
+      "TACGTACGCACACGGATGCTACAGTATATACCATCTCAAACTTACCCTACTCTCAGATTC\n",
+      "CACTTCACTCCATGGCCCATCTCTCACTGAATCAGTACCAAATGCACTCACATCATTATG\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "head chr01.fsa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File compression/uncompression\n",
+    "Many files and file types can be compressed to save space (e.g. 'zipping' a file).  Often times you may have to uncompress a file that you download from the internet before being able to read/use it. Similarly, you may often have to compress a file before uploading or to save disk space. Compression and uncompression are done using programs such as `tar`, and/or `gzip`/`gunzip`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding commands"
+    "## Understanding commands and arguments"
    ]
   },
   {
@@ -609,11 +826,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Chaining commands"
+   ]
   }
  ],
  "metadata": {
@@ -632,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
