Creating Day2-Python III

--- a/day2/notebooks/Day2-Morning-Intro_to_Python_III.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_III.ipynb
@@ -25,6 +25,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<pre>\n",
+    "# Class Definition Syntax\n",
+    "\n",
+    "class ClassName:\n",
+    "    statement-1\n",
+    "    .\n",
+    "    .\n",
+    "    .\n",
+    "    statement-n\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Below is an example of a class definition that can be used to create different _instances_ (objects) of a type `Ball`"
    ]
   },
@@ -38,10 +54,13 @@
     "\n",
     "class Ball:\n",
     "    def __init__(self, \n",
-    "                 radius = 4.7, \n",
-    "                 color = \"red\"):\n",
+    "                 radius, \n",
+    "                 color):\n",
     "        self.radius = radius\n",
     "        self.color = color\n",
+    "    \n",
+    "    def diameter(self):\n",
+    "        return(self.radius*2)\n",
     "    \n",
     "    def area(self):\n",
     "        return(self.radius*(4*math.pi))\n",
@@ -52,22 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Ball at 0x7f925051fb00>"
+       "<__main__.Ball at 0x7f925052c438>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tennis = Ball(radius=1.5,color=\"yellow\")\n",
+    "tennis = Ball(radius=1.25,color=\"yellow\")\n",
     "\n",
     "tennis"
    ]
@@ -81,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.5"
+       "1.25"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +129,7 @@
        "'yellow'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Ball.volume of <__main__.Ball object at 0x7f925051fb00>>"
+       "8.18123086872342"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,20 +173,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a definition for the class `Ball`, we can use this to create different object instances that have the same variables and methods defined.  Each instance however, can have different properties assigned"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'red'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basketball = Ball(radius=4.7,color=\"red\")\n",
+    "\n",
+    "basketball.color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.06194188748811"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basketball.area()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Builtin/default methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many default methods that can be adopted to increase the utility of our objects.  For example, the `__init__()` method that we have already defined is a useful method that helps with the creation of an object by defining what the minimum arguments should be when initializing a new instance of our class.  Other default methods can be modified to improve the utility of our class. For example, the standard output when an instance of `Ball` is called is a rather ugly pythonic description of the class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Ball at 0x7f925052c438>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tennis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we want to make a more reader-friendly description, we can use one of the many built-in methods for class definitions to change the 'representation' of instances of our class, `__repr__(self)`.  This will output a string of our choosing when we call the object directly.  This can be helpful to present some of the arguments, or to provide a readable 'name' for your object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Ball:\n",
     "    def __init__(self, \n",
-    "                 radius = 4.7, \n",
-    "                 color = \"red\"):\n",
+    "                 radius, \n",
+    "                 color):\n",
     "        self.radius = radius\n",
     "        self.color = color\n",
     "        \n",
     "    def __repr__(self):\n",
-    "        return(f\"I am a {self.color} ball with a diameter of {self.radius*2} units\")\n",
+    "        return(f\"I am a {self.color} ball with a diameter of {self.diameter()} units\")\n",
     "    \n",
     "    def diameter(self):\n",
     "        return(self.radius*2)\n",
@@ -181,23 +290,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "I am a yellow ball with a diameter of 3.0 units"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tennis = Ball(radius=1.5,color=\"yellow\")\n",
     "\n",
-    "tennis\n",
-    "\n",
-    "tennis.radius"
+    "tennis"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scopes and Namespaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
